# platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/application-tracker/backend/: pyproject.toml
apps/application-tracker/backend/app/api/: routes.py
apps/application-tracker/backend/app/core/: config.py
apps/application-tracker/backend/app/db/: handler.py
apps/application-tracker/backend/app/models/: email.py
apps/application-tracker/backend/app/schemas/: updates.py
apps/application-tracker/backend/app/services/: classifier.py
apps/application-tracker/frontend/: Dockerfile  docker-entrypoint.sh
apps/application-tracker/frontend/src/: datahandler.py  main.py
apps/application-tracker/resources/n8n/: n8n_at_workflow.json  n8n_workflow.json  readme.md
apps/portal/: README.md
apps/portal/frontend/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json
apps/portal/frontend/public/: env-config.js
apps/portal/frontend/src/: App.css  App.jsx  index.css
apps/portal/frontend/src/components/: Card.jsx  Card.module.css
apps/portal/frontend/src/data/: services.js
infra/healthcheck/backend/: Dockerfile  pyproject.toml
infra/healthcheck/backend/app/: main.py
infra/healthcheck/backend/app/api/: routes.py
infra/healthcheck/backend/app/core/: config.py
infra/healthcheck/backend/app/services/: health_check.py
